<resources>
    <string name="app_name">Suspensions</string>

    <!-- Dialog Utils -->
    <string name="lbl_please_wait">Please wait</string>
    <string name="no_network_msg">Please check your internet connection &amp; try again</string>
    <string name="retry">Retry</string>
    <string name="dismiss">Dismiss</string>

    <!-- Login Activity -->
    <string name="hint_officer_id">Enter ID Here</string>
    <string name="hint_officer_password">Enter Password</string>

    <!-- Verify Details -->
    <string name="lbl_header_verify_details">VERIFY DETAILS</string>
    <string name="lbl_officer_id">Officer ID</string>
    <string name="lbl_current_date">Current Date</string>
    <string name="lbl_time">Time</string>

    <!-- PutUpSuspension Fragment -->
    <string name="suspension_error_msg">Unable to find suspension details, please ensure suspension number is correct</string>

    <!-- Suspension Details -->
    <string name="hint_suspension_number">Suspension Number</string>
    <string name="hint_location">Location</string>
    <string name="hint_reason">Reason</string>
    <string name="hint_start">Start</string>
    <string name="hint_end">End</string>
    <string name="hint_num_of_bays">Number of bays</string>
    <string name="hint_additional_instructions">Additional Instructions To Contractor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
