<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.startOfDay.StartOfDayFragment">

    <TextView
        android:id="@+id/verify_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_header_verify_details"
        android:textSize="@dimen/font_extra_large"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/officer_id_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/verify_details">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/lbl_officer_id"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_officer_id"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/current_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/officer_id_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/lbl_current_date"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_current_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            android:padding="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/current_date_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/lbl_time"
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/font_large"
            android:textStyle="bold"
            android:padding="10dp"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnContinue"
        android:layout_margin="10dp"
        android:enabled="false"
        android:src="@drawable/continue_selector"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>